k8s/apps/justorderit/frontend/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
