k8s/apps/justorderit/frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "justorderit-frontend-ingress"
  namespace: "justorderit"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "justorderit.sontaran.gastbob40.ovh"
      secretName: "justorderit-frontend-ingress-cert-secret"
  rules:
    - host: "justorderit.sontaran.gastbob40.ovh"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "frontend"
                port:
                  number: 3000
